# jobtracker

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  cli.py  infrastructure.py  manage.py  pyproject.toml  sql_models.py
architecture/: diagram.dsl  project_plan.yml
config/: development.json  production.json  testing.json
docker/: production.yml  testing.yml
linkedin_chrome_extension/: background.js  content.js  js-yaml.mjs  manifest.json  popup.html  popup.js
migrations/: env.py
migrations/versions/: 1b0a1dfcb5bf_initial.py  568bdad8031f_initial.py  652dd23e8763_initial.py  7c07850af9e8_initial.py  a2c625d8812b_initial.py  d2e532721e35_initial.py  e5c1e0082c91_initial.py  e6151435d0af_initial.py
requirements/: dev.in  dev.txt  prod.txt  test.txt
src/application/: job.py  user.py
src/core/: manage.py
src/repository/: base_postgres.py  in_memory_gateway.py  job_base.py  job_memory.py  job_postgres.py  resume_base.py  resume_memory.py
src/requests/: add_job.py  add_resume.py  base_request.py  delete_job.py  job_list_request.py  list_jobs.py  update_job.py
src/serializers/: job.py
src/use_case/: add_job.py  add_resume.py  delete_job.py  list_jobs.py  update_job.py
tests/: conftest.py  test_responses.py
tests/integration/: conftest.py  test_sql.py  test_sql_gateway.py
tests/repository/: test_job_memory.py  test_resume_memory.py
tests/requests/: test_add_job_request.py  test_job_list_request.py  test_job_requests.py  test_resume_add_request.py
tests/serializers/: test_job.py
tests/use_case/: conftest.py  test_add_job.py  (+3 more)
(+144 files in other folders)
