[project]
name = "job_application_tracker"
version = "0.1.0"
description = "Job application tracker"
readme = "README.md"
authors = [
    {name = "Kirill A", email = ""}
]
dependencies = [
]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_third_party = [
    "pytest", "requests", "numpy", "pandas"
]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]
extend-ignore = ["E203", "W503"]
max-complexity = 10

[tool.mypy]
python_version = 3.13
ignore_missing_imports = true
explicit-package-bases = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --hypothesis-show-statistics"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]

[tool.hypothesis]
max_examples = 100
deadline = 200

[tool.pre-commit]
default_stages = ["commit", "push"]

[tool.tox]
envlist = "py313"
